fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</form>
 				</div>
 			</div>
-			<div ng-switch-when="5">
+			<div class="game-page" ng-switch-when="5">
 				<div class="player-stats">
 					<div ng-class="{active: gc.games.player1.turn}" class="x-marker">X</div>
 					<h1>{{gc.games.player1.name}}</h1>
